add session socket io

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -2,6 +2,7 @@
 script(type='text/javascript', src='/lib/angular/angular.js')
 script(type='text/javascript', src='/lib/angular-cookies/angular-cookies.js')
 script(type='text/javascript', src='/lib/angular-resource/angular-resource.js')
+script(type='text/javascript', src='/lib/angular-socket-io/socket.js')
 
 //Angular UI
 script(type='text/javascript', src='/lib/angular-bootstrap/ui-bootstrap-tpls.js')
@@ -23,6 +24,11 @@ script(type='text/javascript', src='/js/controllers/articles.js')
 script(type='text/javascript', src='/js/controllers/index.js')
 script(type='text/javascript', src='/js/controllers/header.js')	
 script(type='text/javascript', src='/js/init.js')
+
+
+script(type='text/javascript', src='/socket.io/socket.io.js')
+
+
 
 if (req.host='localhost')
     //Livereload script rendered 
